--- a/neofficial-19.w3spaces.com/index.html
+++ b/neofficial-19.w3spaces.com/index.html
@@ -285,7 +285,29 @@
             }
         }
     </script>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyB3nAT6T9x7nym7nbRkEbP2hrUVF37C9jc",
+    authDomain: "nopeca-106bd.firebaseapp.com",
+    projectId: "nopeca-106bd",
+    storageBucket: "nopeca-106bd.appspot.com",
+    messagingSenderId: "356481785113",
+    appId: "1:356481785113:web:c5e0831590f8df6e0c7988",
+    measurementId: "G-EF9VTKXB5G"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 
 </html>
