--- a/neofficial-19.w3spaces.com/index.html
+++ b/neofficial-19.w3spaces.com/index.html
@@ -317,6 +317,16 @@
 
   gtag('config', 'G-EF9VTKXB5G');
 </script>
+    
+var admin = require("firebase-admin");
+
+var serviceAccount = require("path/to/serviceAccountKey.json");
+
+admin.initializeApp({
+  credential: admin.credential.cert(serviceAccount),
+  databaseURL: "https://nopeca-106bd-default-rtdb.asia-southeast1.firebasedatabase.app"
+});
+
 </body>
 
 </html>
