--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="w3-card w3-round w3-white">
                     <div class="w3-container">
                         <h4 class="w3-center">My Profile</h4>
-                        <p class="w3-center"><img src="file:///D:/NE%20Inportent/sumsang%20ass/Download/HD-wallpaper-skull-neon-triangle-glow-dark.jpg" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
+                        <p class="w3-center"><img src="file:///D:/NE%20OFFICIAL/neofficial_19.w3spaces.com/www.w3schools.com/w3images/NE%20logo%20-1.jpg" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
                         <hr>
                         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Student </p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> Kolkata,IN</p>
