--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
                     <img src="https://www.w3schools.com/w3images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-right w3-opacity">16 min</span>
-                    <h4>Jane Doe</h4><br>
+                    <h4>Nel Son</h4><br>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button>
@@ -191,7 +191,7 @@
                 <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
                     <img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-right w3-opacity">32 min</span>
-                    <h4>Angie Jane</h4><br>
+                    <h4>Lisa</h4><br>
                     <hr class="w3-clear">
                     <p>Have you seen this?</p>
                     <img src="https://www.w3schools.com/w3images/nature.jpg" style="width:100%" class="w3-margin-bottom">
@@ -208,7 +208,7 @@
                 <div class="w3-card w3-round w3-white w3-center">
                     <div class="w3-container">
                         <p>Upcoming Events:</p>
-                        <img src="file:///D:/NE%20Inportent/Pictures/pexels-vlad-kovriga-339119.jpg" alt="Forest" style="width:100%;">
+                        <img src="#" alt="Forest" style="width:100%;">
                         <p><strong>New Music</strong></p>
                         <p>Friday </p>
                         <p><button class="#">🔘</button><a href="https://www.bandlab.com/novo0007"> -▶</a></p>
@@ -219,7 +219,7 @@
                 <div class="w3-card w3-round w3-white w3-center">
                     <div class="w3-container">
                         <p>Friend Request</p>
-                        <img src="file:///D:/NE%20Inportent/Pictures/%EA%92%B0%E1%B5%95%E0%BC%9A%E1%B5%95%E2%91%85%EA%92%B1.jfif" alt="Avatar" style="width:50%"><br>
+                        <img src="https://www.w3schools.com/w3images/avatar6.png" alt="Avatar" style="width:50%"><br>
                         <span>Nel Son</span>
                         <div class="w3-row w3-opacity">
                             <div class="w3-half">
