--- a/index.html
+++ b/index.html
@@ -217,6 +217,18 @@
 
 </body>
 </html>
+                        <!DOCTYPE html>
+<html>
+<body>
+
+<audio controls autoplay>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+
+</body>
+</html>
 
                         <p><strong>New Music</strong></p>
                         <p>Friday </p>
