--- a/index.html
+++ b/index.html
@@ -222,8 +222,7 @@
 <body>
 
 <audio controls autoplay>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
+    <source src="The_Depth.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
