--- a/index.html
+++ b/index.html
@@ -131,6 +131,17 @@
                         </p>
                     </div>
                 </div>
+                                      <!DOCTYPE html>
+<html>
+<body>
+
+<audio controls autoplay>
+    <source src="The_Depth.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+
+</body>
+</html>
                 <br>
 
                 <!-- Alert Box -->
