--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                                       <!DOCTYPE html>
 <html>
 <body>
-<h1 style="color:blue;">The Depth
-Hip Hop</h1>
+<h1 style="color:Gray;">Music</h1>
+    <p style="color:red;">Download mp3.</p>
 <audio controls autoplay>
     <source src="The_Depth.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
