--- a/index.html
+++ b/index.html
@@ -258,6 +258,25 @@ Your browser does not support the audio element.
                 <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
                     <p>ADS</p>
                 </div>
+                <!DOCTYPE html>
+<html>
+<body>
+
+<p>Click the button to create a Local Datetime.</p>
+
+<button onclick="myFunction()">Click here </button>
+
+<script>
+function myFunction() {
+  var x = document.createElement("INPUT");
+  x.setAttribute("type", "datetime-local");
+  document.body.appendChild(x);
+}
+</script>
+
+</body>
+</html>
+
                 <br>
 
                 <div class="w3-card w3-round w3-white w3-padding-32 w3-center">
