--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                         <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 2000</p>
                     </div>
                 </div>
+                <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=667&amp;height=472&amp;hl=en&amp;q=New Delhi&amp;t=k&amp;z=1&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://formatjson.org/">format json</a></div><style>.mapouter{position:relative;text-align:right;width:667px;height:472px;}.gmap_canvas {overflow:hidden;background:none!important;width:667px;height:472px;}.gmap_iframe {width:667px!important;height:472px!important;}</style></div>
+                
                 <br>
 
                 <!-- Accordion -->
