--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <p class="w3-center"><img src="https://www.w3schools.com/w3images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
                         <hr>
                         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Student </p>
-                        <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> Kolkata,IN</p>
+                        <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>New Delhi,IN</p>
                         <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 2000</p>
                     </div>
                 </div>
