--- a/index.html
+++ b/index.html
@@ -145,6 +145,25 @@ Your browser does not support the audio element.
 
 </body>
 </html>
+                <!DOCTYPE html>
+<html>
+    <head>
+        <title>Search-Bar</title>
+        <style>
+            body {
+                background-image: linear-gradient(to left, white, green);
+                color: lawngreen;
+            }
+        </style>
+    </head>
+    <body>
+        <h1 style="text-align: center;">GeeksforGeeks</h1>
+        <script async src=
+"https://cse.google.com/cse.js?cx=007019498718139788174:amtiepdpgeg">
+        </script>
+        <div class="gcse-search"></div>
+    </body>
+</html>
                 <br>
 
                 <!-- Alert Box -->
