--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 2000</p>
                     </div>
                 </div>
-                <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=223&amp;height=202&amp;hl=en&amp;q=New Delhi&amp;t=k&amp;z=1&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://formatjson.org/">format json</a></div><style>.mapouter{position:relative;text-align:right;width:223px;height:202px;}.gmap_canvas {overflow:hidden;background:none!important;width:223px;height:202px;}.gmap_iframe {width:223px!important;height:202px!important;}</style></div>
+                <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=350&amp;height=234&amp;hl=en&amp;q=&amp;t=&amp;z=3&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://formatjson.org/">format json</a></div><style>.mapouter{position:relative;text-align:right;width:350px;height:234px;}.gmap_canvas {overflow:hidden;background:none!important;width:350px;height:234px;}.gmap_iframe {width:350px!important;height:234px!important;}</style></div>
                 
                 <br>
 
@@ -151,13 +151,13 @@ Your browser does not support the audio element.
         <title>Search-Bar</title>
         <style>
             body {
-                background-image: linear-gradient(to left, white, green);
+                background-image: linear-gradient(to left, OldLace, Orange);
                 color: lawngreen;
             }
         </style>
     </head>
     <body>
-        <h1 style="text-align: center;">GeeksforGeeks</h1>
+        <h1 style="text-align: center;">Nope Browser</h1>
         <script async src=
 "https://cse.google.com/cse.js?cx=007019498718139788174:amtiepdpgeg">
         </script>
