--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Your browser does not support the audio element.
         <title>Search-Bar</title>
         <style>
             body {
-                background-image: linear-gradient(to left, AliceBlue, DarkOrchid);
+                background-image: linear-gradient(to left, AliceBlue, Pink);
                 color: FloralWhite;
             }
         </style>
