--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <h4 class="w3-center">My Profile</h4>
                         <p class="w3-center"><img src="https://www.w3schools.com/w3images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
                         <hr>
-                        <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Student </p>
+                        <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Student ✔</p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>New Delhi,IN</p>
                         <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 2000</p>
                     </div>
@@ -136,7 +136,7 @@
                                       <!DOCTYPE html>
 <html>
 <body>
-<h1 style="color:Gray;">Music</h1>
+<h1 style="color:#1a1a1a;">Music</h1>
     <p style="color:red;">Download mp3.</p>
 <audio controls autoplay>
     <source src="The_Depth.mp3" type="audio/mpeg">
@@ -196,9 +196,9 @@ Your browser does not support the audio element.
                 <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
                     <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-right w3-opacity">1 min</span>
-                    <h4>John Doe</h4><br>
+                    <h4>Classy </h4><br>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Il est important de prendre soin de la douleur elle-même, et elle sera suivie par la croissance du patient, mais en même temps, il arrivera qu'il y ait beaucoup de travail et de douleur. Car pour en venir au moindre détail, nul ne doit pratiquer un travail quelconque s'il n'en tire aucun bénéfice.</p>
                     <div class="w3-row-padding" style="margin:0 -16px">
                         <div class="w3-half">
                             <img src="https://www.w3schools.com/w3images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
@@ -214,9 +214,9 @@ Your browser does not support the audio element.
                 <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
                     <img src="https://www.w3schools.com/w3images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-right w3-opacity">16 min</span>
-                    <h4>Nel Son</h4><br>
+                    <h4>인손</h4><br>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>통증 자체를 케어하는 것이 중요하고, 환자의 성장이 뒤따르겠지만, 동시에 많은 일과 고통이 발생하게 됩니다. 세세한 부분에 이르기까지, 어느 누구도 이익을 얻지 않는 한 어떤 종류의 일도 해서는 안 됩니다.</p>
                     <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>  Comment</button>
                 </div>
@@ -228,7 +228,7 @@ Your browser does not support the audio element.
                     <hr class="w3-clear">
                     <p>Have you seen this?</p>
                     <img src="https://www.w3schools.com/w3images/nature.jpg" style="width:100%" class="w3-margin-bottom">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>It is important to take care of the pain itself, and it will be followed by the growth of the patient, but at the same time it will happen that there is a lot of work and pain. For to come to the smallest detail, no one should practice any kind of work unless he derives some benefit from it.</p>
                     <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>  Comment</button>
                 </div>
@@ -245,7 +245,7 @@ Your browser does not support the audio element.
 <html>
 <body>
 
-<iframe width="150" height="100" src="https://www.youtube.com/embed/9jEg9M5cJ6E">
+<iframe width="160" height="120" src="https://www.youtube.com/embed/9jEg9M5cJ6E">
 </iframe>
 
 </body>
@@ -254,7 +254,7 @@ Your browser does not support the audio element.
 
                         <p><strong>New Music</strong></p>
                         <p>Friday </p>
-                        <p><button class="#">🔘</button><a href="https://www.bandlab.com/novo0007"> -▶</a></p>
+                        <p><button class="#">➡</button><a href="https://www.bandlab.com/novo0007">🌐</a></p>
                     </div>
                 </div>
                 <br>
