--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
+        <a href="https://www.bandlab.com/novo0007" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
     </div>
 
     <!-- Page Container -->
@@ -66,9 +66,9 @@
                         <h4 class="w3-center">My Profile</h4>
                         <p class="w3-center"><img src="https://www.w3schools.com/w3images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
                         <hr>
-                        <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Student ✔</p>
-                        <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>New Delhi,IN</p>
-                        <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 2000</p>
+                        <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> NE Official ™ </p>
+                        <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>New Delhi, IN </p>
+                        <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 2, 2000 </p>
                     </div>
                 </div>
                 <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=302&amp;height=234&amp;hl=en&amp;q=In&amp;t=k&amp;z=3&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://formatjson.org/">format json</a></div><style>.mapouter{position:relative;text-align:right;width:302px;height:234px;}.gmap_canvas {overflow:hidden;background:none!important;width:302px;height:234px;}.gmap_iframe {width:302px!important;height:234px!important;}</style></div>
