--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
         <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
-        <a href="https://www.bandlab.com/novo0007" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
     </div>
 
     <!-- Page Container -->
@@ -78,15 +78,15 @@
                 <!-- Accordion -->
                 <div class="w3-card w3-round">
                     <div class="w3-white">
-                        <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i> My Groups</button>
+                        <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i> More Songs </button>
                         <div id="Demo1" class="w3-hide w3-container">
-                            <p>404</p>
+                            <p><link rel="stylesheet" href="https://www.bandlab.com/novo0007"></p>
                         </div>
-                        <button onclick="myFunction('Demo2')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-calendar-check-o fa-fw w3-margin-right"></i> My Events</button>
+                        <button onclick="myFunction('Demo2')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-calendar-check-o fa-fw w3-margin-right"></i> Internet Speed Test </button>
                         <div id="Demo2" class="w3-hide w3-container">
-                            <p>404</p>
+                            <p><link rel="stylesheet" href="https://fast.com/"></p>
                         </div>
-                        <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-users fa-fw w3-margin-right"></i> My Photos</button>
+                        <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-users fa-fw w3-margin-right"></i>Photos</button>
                         <div id="Demo3" class="w3-hide w3-container">
                             <div class="w3-row-padding">
                                 <br>
