--- a/index.html
+++ b/index.html
@@ -278,6 +278,15 @@ Your browser does not support the audio element.
 
                 <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
                     <p>ADS</p>
+                    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EF9VTKXB5G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EF9VTKXB5G');
+</script>
      
                 </div>
                
