--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <html>
 <body>
 <h1 style="color:#1a1a1a;">Music</h1>
-    <p style="color:red;">Download mp3.</p>
+    <p style="color:red;">Download mp3.🎶</p>
 <audio controls autoplay>
     <source src="The_Depth.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
@@ -254,7 +254,33 @@ Your browser does not support the audio element.
 
                         <p><strong>New Music</strong></p>
                         <p>Friday </p>
-                        <p><button class="#">➡</button><a href="https://www.bandlab.com/novo0007">🌐</a></p>
+                        <!DOCTYPE html>
+<html>
+<head>
+<style>
+a:link, a:visited {
+  background-color: #000000;
+  color: white;
+  padding: 1.5px 2.5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: red;
+}
+</style>
+</head>
+<body>
+
+<h2>Link Button</h2>
+<p>A link styled as a button:</p>
+<a href="https://www.youtube.com/channel/UCFDcSLfOtMORy-QHsT79syw" target="_blank">YouTube </a>
+
+</body>
+</html>
+                        <p><button class="#">➡</button><a href="#"></a></p>
                     </div>
                 </div>
                 <br>
