--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
             <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
             <a href="https://nopeca-web.business.site/" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="fa fa-home w3-margin-right"></i>Nopeca</a>
-            <a href="https://www.instagram.com/neofficial_19/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="insta"><i class="fa fa-globe"></i></a>
+            <a href="https://www.instagram.com/neofficial_19/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Instagram"><i class="fa fa-globe"></i></a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Account Settings"><i class="fa fa-user"></i></a>
-            <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages"><i class="fa fa-envelope"></i></a>
+            <a href="mailto:nopeca19@gmail.com" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Send email Messages"><i class="fa fa-envelope"></i></a>
             <div class="w3-dropdown-hover w3-hide-small">
                 <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>
                 <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
@@ -80,11 +80,11 @@
                     <div class="w3-white">
                         <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i> More Songs </button>
                         <div id="Demo1" class="w3-hide w3-container">
-                            <p><link rel="stylesheet" href="https://www.bandlab.com/novo0007"></p>
+                            <a href="https://www.bandlab.com/novo0007">Bandlab!</a>
                         </div>
                         <button onclick="myFunction('Demo2')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-calendar-check-o fa-fw w3-margin-right"></i> Internet Speed Test </button>
                         <div id="Demo2" class="w3-hide w3-container">
-                            <p><link rel="stylesheet" href="https://fast.com/"></p>
+                           <a href="https://fast.com/">Internet speed test!</a>
                         </div>
                         <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-users fa-fw w3-margin-right"></i>Photos</button>
                         <div id="Demo3" class="w3-hide w3-container">
@@ -250,10 +250,8 @@ Your browser does not support the audio element.
 
 </body>
 </html>
- 
-
                         <p><strong>New Music</strong></p>
-                        <p>Friday </p>
+                        <p>very soon </p>
                         <!DOCTYPE html>
 <html>
 <head>
@@ -273,15 +271,12 @@ a:hover, a:active {
 </style>
 </head>
 <body>
-
-<h2>Link Button</h2>
-<p>A link styled as a button:</p>
+<h2>mp3 download </h2>
+<p> You can download this music mp3 very soon:</p>
 <a href="https://www.youtube.com/channel/UCFDcSLfOtMORy-QHsT79syw" target="_blank">YouTube </a>
 
 </body>
-</html>
-                        <p><button class="#">➡</button><a href="#"></a></p>
-                    </div>
+                        </html>                   </div>
                 </div>
                 <br>
 
