--- a/index.html
+++ b/index.html
@@ -251,7 +251,6 @@ Your browser does not support the audio element.
 </body>
 </html>
                         <p><strong>New Music</strong></p>
-                        <p>very soon </p>
                         <!DOCTYPE html>
 <html>
 <head>
@@ -264,19 +263,18 @@ a:link, a:visited {
   text-decoration: none;
   display: inline-block;
 }
-
 a:hover, a:active {
   background-color: red;
 }
 </style>
 </head>
 <body>
-<h2>mp3 download </h2>
 <p> You can download this music mp3 very soon:</p>
 <a href="https://www.youtube.com/channel/UCFDcSLfOtMORy-QHsT79syw" target="_blank">YouTube </a>
 
-</body>
-                        </html>                   </div>
+</body>  
+    </html> 
+                    </div>
                 </div>
                 <br>
 
