--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large">
-        <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
+        <a href="https://www.instagram.com/neofficial_19/" class="w3-bar-item w3-button w3-padding-large">Instagram</a>
+        <a href="mailto:nopeca19@gmail.com" class="w3-bar-item w3-button w3-padding-large">Send email Messages</a>
+        <a href="https://poki.com/" class="w3-bar-item w3-button w3-padding-large">Games</a>
+        <a href="https://novo0007.github.io/Nopeca/" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
     </div>
 
     <!-- Page Container -->
@@ -173,6 +173,7 @@ Your browser does not support the audio element.
         </span>
                     <p><strong>Hey!</strong></p>
                     <p>People are looking at your profile. Find out who.</p>
+                    <a href="https://poki.com/" class="w3-bar-item w3-button w3-padding-large">Free Online Games</a>
                 </div>
 
                 <!-- End Left Column -->
