--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ Your browser does not support the audio element.
                         </div>
                     </div>
                     <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button>
+                    <!-- Write your comments here -->
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>  Comment</button>
                 </div>
 
