--- a/index.html
+++ b/index.html
@@ -72,7 +72,20 @@
                     </div>
                 </div>
                 <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=302&amp;height=234&amp;hl=en&amp;q=In&amp;t=k&amp;z=3&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://formatjson.org/">format json</a></div><style>.mapouter{position:relative;text-align:right;width:302px;height:234px;}.gmap_canvas {overflow:hidden;background:none!important;width:302px;height:234px;}.gmap_iframe {width:302px!important;height:234px!important;}</style></div>
-                
+                <!DOCTYPE html>
+<html>
+<body>
+
+<h2>Run</h2>
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
+
+</body>
+</html> 
+
                 <br>
 
                 <!-- Accordion -->
