--- a/index.html
+++ b/index.html
@@ -78,23 +78,8 @@
 
 <h2>Run</h2>
 <button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-collect Date and Time.</button>
-    <style>
-a:link, a:visited {
-  background-color: #000000;
-  color: white;
-  padding: 1.5px 2.5px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-a:hover, a:active {
-  background-color: red;
-}
-</style>
-<p id="demo"></p>
-
+onclick="document.getElementById('demo').innerHTML = Date()"> Date and Time.</button>
+  <p id="demo"></p>
 </body>
 </html> 
 
