--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@ Your browser does not support the audio element.
                     <!DOCTYPE html>
 <title>My Example</title>
 
-<form action="/html/tags/html_form_tag_action.cfm" method="post">
+<form action="" method="post">
 <div>
 <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
-Hey... say something!
+
 </textarea>
 </div>
 <input type="submit" value="Submit">
