--- a/index.html
+++ b/index.html
@@ -351,7 +351,29 @@ a:hover, a:active {
     <footer class="w3-container w3-theme-d3 w3-padding-16">
         <h5>Footer</h5>
     </footer>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>ANIMATED SHARE BUTTON</title>
+    </head>
+        <link rel=stylesheet href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <body>
+   <div class="social">
+        <a class="btn facebook" href="#">
+            <i class="fa fa-facebook" aria-hidden="true"></i></a>
+       <a class="btn Twitter" href="#">
+       <i class="fa fa-twitter" aria-hidden="true"></i></a>
+       <a class="btn Google" href="#">
+            <i class="fa fa-google" aria-hidden="true"></i></a>
+          <a class="btn Instagram" href="#">
+           <i class="fa fa-instagram" aria-hidden="true"></i></a>
+       <button class="fearlesspython " 
+    onclick="window.location.href = 'https://fearlesspython.tech/';">
+        Click Here
+    </button>
 
+       </div>
     <footer class="w3-container w3-theme-d5">
         <p>Made By NE <a href="https://github.com/Novo0007" target="__blank">  github NE</a></p>
     </footer>
