--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="w3-card w3-round w3-white">
                     <div class="w3-container">
                         <h4 class="w3-center">My Profile</h4>
-                        <p class="w3-center"><img src="NE%20logo%20-1.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
+                        <p class="w3-center"><img src="https://www.w3schools.com/w3images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
                         <hr>
                         <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> NE Official ™ </p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i>New Delhi, IN </p>
@@ -360,16 +360,16 @@ a:hover, a:active {
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <body>
    <div class="social">
-        <a class="btn facebook" href="#">
+        <a class="btn facebook" href="https://www.facebook.com/">
             <i class="fa fa-facebook" aria-hidden="true"></i></a>
-       <a class="btn Twitter" href="#">
+       <a class="btn Twitter" href="https://twitter.com/">
        <i class="fa fa-twitter" aria-hidden="true"></i></a>
-       <a class="btn Google" href="#">
+       <a class="btn Google" href="https://www.google.com/webhp?authuser=2">
             <i class="fa fa-google" aria-hidden="true"></i></a>
-          <a class="btn Instagram" href="#">
+          <a class="btn Instagram" href="https://www.instagram.com/neofficial_19/">
            <i class="fa fa-instagram" aria-hidden="true"></i></a>
        <button class="fearlesspython " 
-    onclick="window.location.href = 'https://fearlesspython.tech/';">
+    onclick="window.location.href = 'https://www.youtube.com/channel/UCFDcSLfOtMORy-QHsT79syw';">
         Click Here
     </button>
 
