--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         }
     </style>
 </head>
+    <head>
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-TTZ9DJN"></script>
-
+    </head>
 <body class="w3-theme-l5">
 
     <!-- Navbar -->
