--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@ Your browser does not support the audio element.
     </head>
     <body>
         <h1 style="text-align: center;">Nope Browser</h1>
-        <script async src=
-"https://cse.google.com/cse.js?cx=007019498718139788174:amtiepdpgeg">
-        </script>
-        <div class="gcse-search"></div>
+        <script async src="https://cse.google.com/cse.js?cx=115e2fc7d9b384259">
+</script>
+<div class="gcse-search"></div>>
     </body>
 </html>
                 <br>
