--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Your browser does not support the audio element.
         </style>
     </head>
     <body>
-        <h1 style="text-align: center;">Nope Browser</h1>
+        <h1 style="text-align: center;">NNC Browser</h1>
         <script async src="https://cse.google.com/cse.js?cx=115e2fc7d9b384259">
 </script>
 <div class="gcse-search"></div>>
@@ -198,6 +198,9 @@ Your browser does not support the audio element.
                         <div class="w3-card w3-round w3-white">
                             <div class="w3-container w3-padding">
                                 <h6 class="w3-opacity">Social Media By NE</h6>
+                                <script async src="https://cse.google.com/cse.js?cx=115e2fc7d9b384259">
+</script>
+<div class="gcse-search"></div>
                                 <p contenteditable="true" class="w3-border w3-padding">Status: What's Your Feeling? </p>
                                 <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i>  Post</button>
                             </div>
