--- a/index.html
+++ b/index.html
@@ -169,10 +169,7 @@ Your browser does not support the audio element.
         </style>
     </head>
     <body>
-        <h1 style="text-align: center;">NNC Browser</h1>
-        <script async src="https://cse.google.com/cse.js?cx=115e2fc7d9b384259">
-</script>
-<div class="gcse-search"></div>>
+        
     </body>
 </html>
                 <br>
@@ -287,7 +284,7 @@ a:link, a:visited {
   padding: 1.5px 2.5px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: inline-gay;
 }
 a:hover, a:active {
   background-color: red;
