--- a/index.html
+++ b/index.html
@@ -279,12 +279,12 @@ Your browser does not support the audio element.
 <head>
 <style>
 a:link, a:visited {
-  background-color: #000000;
+  background-color: #00ff000;
   color: white;
   padding: 1.5px 2.5px;
   text-align: center;
   text-decoration: none;
-  display: inline-gay;
+  display: white;
 }
 a:hover, a:active {
   background-color: red;
