--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ a:link, a:visited {
   padding: 1.5px 2.5px;
   text-align: center;
   text-decoration: none;
-  display: white;
+  display: 71, 188, 255;
 }
 a:hover, a:active {
   background-color: red;
