--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Your browser does not support the audio element.
 <head>
 <style>
 a:link, a:visited {
-  background-color: #0000000;
+  background-color: #131314;
   color: white;
   padding: 1.5px 2.5px;
   text-align: center;
