--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@ Your browser does not support the audio element.
 <head>
 <style>
 a:link, a:visited {
-  background-color: #131314;
-  color: white;
+  background-color: #d3d8e8;
+  color: #8198e3;
   padding: 1.5px 2.5px;
   text-align: center;
   text-decoration: none;
