--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="google-signin-client_id" content="356481785113-n2ot6cp4e85b0mhbtmgrt2dim8uqjn4v.apps.googleusercontent.com">
     <style>
         html,
         body,
@@ -21,12 +22,12 @@
         }
     </style>
 </head>
-    <head>
+    <body>
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-TTZ9DJN"></script>
-    </head>
-    <head>
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
+        
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-KPHMPSX"></script>
-    </head>
+    </body>
 <body class="w3-theme-l5">
 
     <!-- Navbar -->
@@ -186,9 +187,9 @@ Your browser does not support the audio element.
                     <p>People are looking at your profile. Find out who.</p>
                     <a href="https://poki.com/" class="w3-bar-item w3-button w3-padding-large">Free Online Games</a>
                 </div>
-
+</div>
                 <!-- End Left Column -->
-            </div>
+         
 
             <!-- Middle Column -->
             <div class="w3-col m7">
