--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="google-signin-client_id" content="356481785113-n2ot6cp4e85b0mhbtmgrt2dim8uqjn4v.apps.googleusercontent.com">
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <style>
         html,
         body,
@@ -67,6 +68,7 @@
             <!-- Left Column -->
             <div class="w3-col m3">
                 <!-- Profile -->
+               
                 <div class="w3-card w3-round w3-white">
                     <div class="w3-container">
                         <h4 class="w3-center">My Profile</h4>
