--- a/index.html
+++ b/index.html
@@ -279,7 +279,15 @@ Your browser does not support the audio element.
      data-size="medium"
      data-logo_alignment="left">
 </div>
-
+<a href="#" onclick="signOut();">Sign out</a>
+<script>
+  function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+      console.log('User signed out.');
+    });
+  }
+</script>
                 <!-- End Middle Column -->
             </div>
 
@@ -402,6 +410,15 @@ a:hover, a:active {
     <footer class="w3-container w3-theme-d5">
         <p>Made By NE <a href="https://github.com/Novo0007" target="__blank">  github NE</a></p>
     </footer>
+              <script>
+            function onSignIn(googleUser) {
+  var profile = googleUser.getBasicProfile();
+  console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+  console.log('Name: ' + profile.getName());
+  console.log('Image URL: ' + profile.getImageUrl());
+  console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+}
+   </script>
 
     <script>
         // Accordion
