--- a/index.html
+++ b/index.html
@@ -260,6 +260,25 @@ Your browser does not support the audio element.
                     <p>It is important to take care of the pain itself, and it will be followed by the growth of the patient, but at the same time it will happen that there is a lot of work and pain. For to come to the smallest detail, no one should practice any kind of work unless he derives some benefit from it.</p>
                     <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-thumbs-up"></i>  Like</button>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>  Comment</button>
+                    
+                    <div id="g_id_onload"
+     data-client_id="356481785113-n2ot6cp4e85b0mhbtmgrt2dim8uqjn4v.apps.googleusercontent.com"
+     data-context="signup"
+     data-ux_mode="popup"
+     data-login_uri="https://nopeca-106bd.firebaseapp.com"
+     data-nonce=""
+     data-auto_select="true"
+     data-itp_support="true">
+</div>
+
+<div class="g_id_signin"
+     data-type="standard"
+     data-shape="pill"
+     data-theme="outline"
+     data-text="signup_with"
+     data-size="medium"
+     data-logo_alignment="left">
+</div>
                 </div>
                  <div class="g-signin2" data-onsuccess="onSignIn"></div>
                 <div id="g_id_onload"
